// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Playback Controls Renders correctly 1`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around"
>
  <span
    class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-marked"
  >
    <span
      class="MuiSlider-rail"
    />
    <span
      class="MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <input
      type="hidden"
      value="0"
    />
    <span
      class="MuiSlider-mark MuiSlider-markActive"
      data-index="0"
      style="left: 0%;"
    />
    <span
      aria-hidden="true"
      class="MuiSlider-markLabel MuiSlider-markLabelActive"
      data-index="0"
      style="left: 0%;"
    >
      00:00
    </span>
    <span
      class="MuiSlider-mark"
      data-index="1"
      style="left: 100%;"
    />
    <span
      aria-hidden="true"
      class="MuiSlider-markLabel"
      data-index="1"
      style="left: 100%;"
    >
      00:01
    </span>
    <span
      aria-orientation="horizontal"
      aria-valuemax="1"
      aria-valuemin="0"
      aria-valuenow="0"
      class="MuiSlider-thumb MuiSlider-thumbColorSecondary"
      data-index="0"
      role="slider"
      style="left: 0%;"
      tabindex="0"
    />
  </span>
  <div
    class="MuiGrid-root MuiGrid-item"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
      tabindex="0"
      title="Previous"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-1"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 6h2v12H6zm3.5 6l8.5 6V6z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
      tabindex="0"
      title="Play"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-1"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8 5v14l11-7z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
      tabindex="0"
      title="Next"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-1"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 18l8.5-6L6 6v12zM16 6v12h2V6h-2z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Playback Controls Renders correctly with next disabled 1`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around"
>
  <span
    class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-marked"
  >
    <span
      class="MuiSlider-rail"
    />
    <span
      class="MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <input
      type="hidden"
      value="0"
    />
    <span
      class="MuiSlider-mark MuiSlider-markActive"
      data-index="0"
      style="left: 0%;"
    />
    <span
      aria-hidden="true"
      class="MuiSlider-markLabel MuiSlider-markLabelActive"
      data-index="0"
      style="left: 0%;"
    >
      00:00
    </span>
    <span
      class="MuiSlider-mark"
      data-index="1"
      style="left: 100%;"
    />
    <span
      aria-hidden="true"
      class="MuiSlider-markLabel"
      data-index="1"
      style="left: 100%;"
    >
      00:01
    </span>
    <span
      aria-orientation="horizontal"
      aria-valuemax="1"
      aria-valuemin="0"
      aria-valuenow="0"
      class="MuiSlider-thumb MuiSlider-thumbColorSecondary"
      data-index="0"
      role="slider"
      style="left: 0%;"
      tabindex="0"
    />
  </span>
  <div
    class="MuiGrid-root MuiGrid-item"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
      tabindex="0"
      title="Previous"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-13"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 6h2v12H6zm3.5 6l8.5 6V6z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
      tabindex="0"
      title="Play"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-13"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8 5v14l11-7z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
      disabled=""
      tabindex="-1"
      title="Next"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-13"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 18l8.5-6L6 6v12zM16 6v12h2V6h-2z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Playback Controls Renders correctly with play disabled 1`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around"
>
  <span
    class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-marked"
  >
    <span
      class="MuiSlider-rail"
    />
    <span
      class="MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <input
      type="hidden"
      value="0"
    />
    <span
      class="MuiSlider-mark MuiSlider-markActive"
      data-index="0"
      style="left: 0%;"
    />
    <span
      aria-hidden="true"
      class="MuiSlider-markLabel MuiSlider-markLabelActive"
      data-index="0"
      style="left: 0%;"
    >
      00:00
    </span>
    <span
      class="MuiSlider-mark"
      data-index="1"
      style="left: 100%;"
    />
    <span
      aria-hidden="true"
      class="MuiSlider-markLabel"
      data-index="1"
      style="left: 100%;"
    >
      00:01
    </span>
    <span
      aria-orientation="horizontal"
      aria-valuemax="1"
      aria-valuemin="0"
      aria-valuenow="0"
      class="MuiSlider-thumb MuiSlider-thumbColorSecondary"
      data-index="0"
      role="slider"
      style="left: 0%;"
      tabindex="0"
    />
  </span>
  <div
    class="MuiGrid-root MuiGrid-item"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
      tabindex="0"
      title="Previous"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-19"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 6h2v12H6zm3.5 6l8.5 6V6z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
      disabled=""
      tabindex="-1"
      title="Play"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-19"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8 5v14l11-7z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
      tabindex="0"
      title="Next"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-19"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 18l8.5-6L6 6v12zM16 6v12h2V6h-2z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Playback Controls Renders correctly with prev disabled 1`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around"
>
  <span
    class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-marked"
  >
    <span
      class="MuiSlider-rail"
    />
    <span
      class="MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <input
      type="hidden"
      value="0"
    />
    <span
      class="MuiSlider-mark MuiSlider-markActive"
      data-index="0"
      style="left: 0%;"
    />
    <span
      aria-hidden="true"
      class="MuiSlider-markLabel MuiSlider-markLabelActive"
      data-index="0"
      style="left: 0%;"
    >
      00:00
    </span>
    <span
      class="MuiSlider-mark"
      data-index="1"
      style="left: 100%;"
    />
    <span
      aria-hidden="true"
      class="MuiSlider-markLabel"
      data-index="1"
      style="left: 100%;"
    >
      00:01
    </span>
    <span
      aria-orientation="horizontal"
      aria-valuemax="1"
      aria-valuemin="0"
      aria-valuenow="0"
      class="MuiSlider-thumb MuiSlider-thumbColorSecondary"
      data-index="0"
      role="slider"
      style="left: 0%;"
      tabindex="0"
    />
  </span>
  <div
    class="MuiGrid-root MuiGrid-item"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
      disabled=""
      tabindex="-1"
      title="Previous"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-7"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 6h2v12H6zm3.5 6l8.5 6V6z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
      tabindex="0"
      title="Play"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-7"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8 5v14l11-7z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
      tabindex="0"
      title="Next"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root makeStyles-icon-7"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 18l8.5-6L6 6v12zM16 6v12h2V6h-2z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
